@@ -18,6 +18,8 @@
 - attempt to fix Debian upgrade fail bug#300703.
   - changes from Herbert Xus' patch.
   - he`s not sure he got all cases and I can't see more either, so we'll see.
+- revert some broken changes in Gentoo init script.
+- fix end of string handling at end of parsing options string.
 
 14/2/2005 autofs-4.1.4_beta2
 ----------------------------
